--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -39,16 +39,10 @@ jobs:
           make
 
       - name: make
-        run: make LIBDIR=../tkey-libs
-
-      - name: check matching signer/app.bin hash
-        run: make LIBDIR=../tkey-libs -C apps check-signer-hash
-
-      - name: lint go code
-        run: make lint
+        run: make LIBDIR=./tkey-libs
 
       - name: check fmt of c code
-        run: make -C apps checkfmt
+        run: make checkfmt
 
       - name: check for SPDX tags
         run: ./tools/spdx-ensure
