--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -5,6 +5,7 @@ on:
   push:
     branches:
       - 'main'
+      - 'ci'
   pull_request: {}
   # allow manual runs:
   workflow_dispatch: {}
@@ -17,30 +18,14 @@ jobs:
       # https://github.com/actions/runner/issues/2033#issuecomment-1598547465
       options: --user 1001
     steps:
-      - uses: actions/setup-go@v4
-        with:
-          go-version: '>=1.20.0'
-
       - name: checkout
         uses: actions/checkout@v3
         with:
-          # fetch-depth: 0
+          #fetch-depth: 0
           persist-credentials: false
 
-      - name: Clone tkey-libs
-        uses: actions/checkout@v3
-        with:
-          repository: tillitis/tkey-libs
-          ref: v0.0.2
-          path: tkey-libs
-
-      - name: Build tkey-libs
-        run: |
-          cd tkey-libs
-          make -j
-
-      - name: make
-        run: make LIBDIR=./tkey-libs
+      - name: build
+        run: ./build.sh
 
       - name: check fmt of c code
         run: make checkfmt
